# doremi326

./: .gitignore  DEV_GUIDE.md  README.md  dev.ps1
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  health.py  scores.py  users.py
backend/app/core/: config.py  database.py
backend/app/models/: score.py
deploy/: deploy.sh
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: SnakeGame.vue
